--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 
     <div class="container">
       <div class="header-content">
-        <h1>I'm <span class="typed"></span></h1>
-        <p>designer, developeur, photographer</p>
-
+        <h1>Hello! I'm <span class="typed"></span></h1>
+        <p>VIDEO EDITOR - VIDEOGRAPHER - DIRECTOR</p>
+        
+        <!-- 
         <ul class="list-unstyled list-social">
           <li><a href="#"><i class="ion-social-facebook"></i></a></li>
           <li><a href="#"><i class="ion-social-twitter"></i></a></li>
@@ -81,7 +82,9 @@
           <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
           <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
           <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
-        </ul>
+        </ul> 
+        -->
+
       </div>
     </div>
   </div>
