--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-            <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+            <p class="p-heading">Hi there! I'm John Alfred M. Antalan, a passionate video editor, videographer and director.</p>
+            <p class="separator">With over two years of experience turning raw footage into compelling visual stories. I specialize in "dynamic cuts, color grading, and storytelling through visuals", bringing ideas to life with creativity and precision. I’m always excited to explore new projects, push creative boundaries, and continue growing as a video editor. Take a look at my work, and feel free to reach out—let's create something amazing together!</p>
 
           </div>
 
@@ -127,49 +127,33 @@
 
           <div class="services-block">
 
-            <i class="ion-ios-browsers-outline"></i>
-            <span>UI/UX DESIGN</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <img src="images/logo_pr.png" alt="" srcset="">
+            <span>Premiere Pro</span>
+            <p class="separator">Video Editing</p>
 
           </div>
 
           <div class="services-block">
 
-            <i class="ion-ios-lightbulb-outline"></i>
-            <span>BRAND IDENTITY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <img src="images/logo_ae.png" alt="" srcset="">
+            <span>Adobe After effects</span>
+            <p class="separator">Motion Graphics and VFX</p>
 
           </div>
 
           <div class="services-block">
 
-            <i class="ion-ios-color-wand-outline"></i>
-            <span>WEB DESIGN</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <img src="images/logo_ps.png" alt="" srcset="">
+            <span>Photoshop</span>
+            <p class="separator">Visual Support for Video Editing</p>
 
           </div>
 
           <div class="services-block">
 
-            <i class="ion-social-android-outline"></i>
-            <span>MOBILE APPS</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-
-          <div class="services-block">
-
-            <i class="ion-ios-analytics-outline"></i>
-            <span>Analytics</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-
-          <div class="services-block">
-
-            <i class="ion-ios-camera-outline"></i>
-            <span>PHOTOGRAPHY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <img src="images/logo_blender.png" alt="" srcset="">
+            <span>Blender</span>
+            <p class="separator">3D Tracking and VFX</p>
 
           </div>
 
