Finish portfolio tabs implementation

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
               class="nav-link w-100 border-0 portfolio-filter-button active"
               id="home-tab"
               data-toggle="tab"
-              data-target="#home"
+              data-target="#highlights"
               type="button"
               role="tab"
-              aria-controls="home"
+              aria-controls="highlights"
               aria-selected="true"
             >
               Highlights and Events
@@ -155,10 +155,10 @@
               class="nav-link w-100 border-0 portfolio-filter-button"
               id="profile-tab"
               data-toggle="tab"
-              data-target="#profile"
+              data-target="#cinematics"
               type="button"
               role="tab"
-              aria-controls="profile"
+              aria-controls="cinematics"
               aria-selected="false"
             >
             Cinematics
@@ -169,10 +169,10 @@
               class="nav-link w-100 border-0 portfolio-filter-button"
               id="contact-tab"
               data-toggle="tab"
-              data-target="#contact"
+              data-target="#advertisements"
               type="button"
               role="tab"
-              aria-controls="contact"
+              aria-controls="advertisements"
               aria-selected="false"
             >
             Advertisements
@@ -183,10 +183,10 @@
               class="nav-link w-100 border-0"
               id="contact-tab"
               data-toggle="tab"
-              data-target="#contact"
+              data-target="#motion_graphics"
               type="button"
               role="tab"
-              aria-controls="contact"
+              aria-controls="motion_graphics"
               aria-selected="false"
             >
             Motion Graphics
@@ -197,10 +197,10 @@
               class="nav-link w-100 border-0"
               id="contact-tab"
               data-toggle="tab"
-              data-target="#contact"
+              data-target="#photography"
               type="button"
               role="tab"
-              aria-controls="contact"
+              aria-controls="photography"
               aria-selected="false"
             >
             Photography
@@ -208,30 +208,58 @@
           </li>
         </ul>
       </div>
+
+      <!-- Tab Content -->
       <div class="tab-content" id="myTabContent">
+
+        <!-- Hightlights -->
         <div
           class="tab-pane fade show active"
-          id="home"
+          id="highlights"
           role="tabpanel"
-          aria-labelledby="home-tab"
+          aria-labelledby="highlights-tab"
         >
-        Advertisements
+        highlights-tab
         </div>
+
+        <!-- Cinematics -->
         <div
           class="tab-pane fade"
-          id="profile"
+          id="cinematics"
           role="tabpanel"
-          aria-labelledby="profile-tab"
+          aria-labelledby="cinematics-tab"
         >
-          profile tab content
+          cinematics tab content
         </div>
+
+        <!-- Advertisements -->
         <div
           class="tab-pane fade"
-          id="contact"
+          id="advertisements"
           role="tabpanel"
-          aria-labelledby="contact-tab"
+          aria-labelledby="advertisements-tab"
         >
-          contact tab content
+          advertisements tab content
+        </div>
+
+        <!-- Motion Graphics -->
+        <div
+          class="tab-pane fade"
+          id="motion_graphics"
+          role="tabpanel"
+          aria-labelledby="motion_graphics-tab"
+        >
+          motion_graphics tab content
+        </div>
+
+        <!-- Photography -->
+        <div
+          class="tab-pane fade"
+          id="photography"
+          role="tabpanel"
+          aria-labelledby="photography-tab"
+        >
+          photography tab content
         </div>
       </div>
 
