Add highlights tab

--- a/index.html
+++ b/index.html
@@ -134,9 +134,12 @@
       <div class="container text-center text-dark py-5">
         <h1>My Portfolio</h1>
       </div>
-      <div class="container">
+      <div class="container my-3">
         <ul class="nav nav-pills nav-fill" id="myTab" role="tablist">
-          <li class="nav-item m-1 order-lg-first order-last" role="presentation">
+          <li
+            class="nav-item m-1 order-lg-first order-last"
+            role="presentation"
+          >
             <button
               class="nav-link w-100 border-0 portfolio-filter-button active"
               id="home-tab"
@@ -161,7 +164,7 @@
               aria-controls="cinematics"
               aria-selected="false"
             >
-            Cinematics
+              Cinematics
             </button>
           </li>
           <li class="nav-item m-1" role="presentation">
@@ -175,8 +178,10 @@
               aria-controls="advertisements"
               aria-selected="false"
             >
-            Advertisements
+              Advertisements
             </button>
+          </li>
+
           <li class="nav-item m-1" role="presentation">
             <button
               class="nav-link w-100 border-0 portfolio-filter-button"
@@ -189,8 +194,10 @@
               aria-controls="motion_graphics"
               aria-selected="false"
             >
-            Motion Graphics
+              Motion Graphics
             </button>
+          </li>
+
           <li class="nav-item m-1" role="presentation">
             <button
               class="nav-link w-100 border-0 portfolio-filter-button"
@@ -203,7 +210,7 @@
               aria-controls="photography"
               aria-selected="false"
             >
-            Photography
+              Photography
             </button>
           </li>
         </ul>
@@ -211,15 +218,175 @@
 
       <!-- Tab Content -->
       <div class="tab-content" id="myTabContent">
-
-        <!-- Hightlights -->
+        <!-- Highlights -->
         <div
           class="tab-pane fade show active"
           id="highlights"
           role="tabpanel"
           aria-labelledby="highlights-tab"
         >
-        highlights-tab
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1yLKJuU-UyHs0JZeN2Vd3gEhNTU1RWKXU/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-6 my-3 align-self-center">
+                <div class="text-center">
+                  <h2>Supreme Pure Organic Barley</h2>
+                  <h3>Net25 TV Station</h3>
+                </div>
+                <div class="row justify-content-center">
+                  <div class="flex p-3">
+                    <p>Roles:</p>
+                    <ul>
+                      <li>Videographer</li>
+                      <li>Video Editor</li>
+                      <li>Sound Designer</li>
+                    </ul>
+                  </div>
+                  <div class="flex p-3">
+                    <p>Tools:</p>
+                    <ul>
+                      <li>DJI Pocket Osmo 3</li>
+                      <li>Canon m50 Mark II</li>
+                      <li>Adobe Premiere Pro</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6 order-lg-last">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1iwa6GGhsgaHj3Okd5h5jetvaRlW39LBS/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div
+                class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center"
+              >
+                <div class="text-center">
+                  <h2>Contract Signing at Net25</h2>
+                  <h3>Net25 HQ Diliman</h3>
+                </div>
+                <div class="row justify-content-center">
+                  <div class="flex p-3">
+                    <p>Roles:</p>
+                    <ul>
+                      <li>Videographer</li>
+                      <li>Video Editor</li>
+                      <li>Sound Designer</li>
+                    </ul>
+                  </div>
+                  <div class="flex p-3">
+                    <p>Tools:</p>
+                    <ul>
+                      <li>DJI Pocket Osmo 3</li>
+                      <li>Adobe Premiere Pro</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1VUwrShVWm-A1UNOEXhKjqagVFZawQrMC/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-6 my-3 align-self-center">
+                <div class="text-center">
+                  <h2>Nationwide Simultaneous Earthquake Drill</h2>
+                  <h3>NDRRMC Occidental Mindoro</h3>
+                </div>
+                <div class="row justify-content-center">
+                  <div class="flex p-3">
+                    <p>Roles:</p>
+                    <ul>
+                      <li>Videographer</li>
+                      <li>Video Editor</li>
+                      <li>Sound Designer</li>
+                    </ul>
+                  </div>
+                  <div class="flex p-3">
+                    <p>Tools:</p>
+                    <ul>
+                      <li>Sony a6000 + 16-50</li>
+                      <li>DJI SC Ronin Gimbal</li>
+                      <li>Adobe Premiere Pro</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6 order-lg-last">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1gEjCqCxnUeFCg9LvxaoexuuM6dKtK-Ke/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div
+                class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center"
+              >
+                <div class="text-center">
+                  <h2>Levex Momentum</h2>
+                  <h3>Company Soft Launching</h3>
+                </div>
+                <div class="row justify-content-center">
+                  <div class="flex p-3">
+                    <p>Roles:</p>
+                    <ul>
+                      <li>Videographer</li>
+                      <li>Video Editor</li>
+                      <li>Sound Designer</li>
+                    </ul>
+                  </div>
+                  <div class="flex p-3">
+                    <p>Tools:</p>
+                    <ul>
+                      <li>DJI Pocket Osmo 3</li>
+                      <li>Canon m50 Mark II</li>
+                      <li>Adobe Premiere Pro</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Cinematics -->
@@ -260,165 +427,6 @@
           aria-labelledby="photography-tab"
         >
           photography tab content
-        </div>
-      </div>
-
-      <div class="container-fluid mb-3">
-        <div class="row">
-          <div class="col-sm-12 col-lg-6">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe
-                class="embed-responsive-item"
-                src="https://drive.google.com/file/d/1yLKJuU-UyHs0JZeN2Vd3gEhNTU1RWKXU/preview"
-                height="100%"
-                width="100%"
-                allow="autoplay"
-              ></iframe>
-            </div>
-          </div>
-          <div class="col-sm-12 col-lg-6 my-3 align-self-center">
-            <div class="text-center">
-              <h2>Supreme Pure Organic Barley</h2>
-              <h3>Net25 TV Station</h3>
-            </div>
-            <div class="row justify-content-center">
-              <div class="flex p-3">
-                <p>Roles:</p>
-                <ul>
-                  <li>Videographer</li>
-                  <li>Video Editor</li>
-                  <li>Sound Designer</li>
-                </ul>
-              </div>
-              <div class="flex p-3">
-                <p>Tools:</p>
-                <ul>
-                  <li>DJI Pocket Osmo 3</li>
-                  <li>Canon m50 Mark II</li>
-                  <li>Adobe Premiere Pro</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container-fluid mb-3">
-        <div class="row">
-          <div class="col-sm-12 col-lg-6 order-lg-last">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe
-                class="embed-responsive-item"
-                src="https://drive.google.com/file/d/1iwa6GGhsgaHj3Okd5h5jetvaRlW39LBS/preview"
-                height="100%"
-                width="100%"
-                allow="autoplay"
-              ></iframe>
-            </div>
-          </div>
-          <div class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center">
-            <div class="text-center">
-              <h2>Contract Signing at Net25</h2>
-              <h3>Net25 HQ Diliman</h3>
-            </div>
-            <div class="row justify-content-center">
-              <div class="flex p-3">
-                <p>Roles:</p>
-                <ul>
-                  <li>Videographer</li>
-                  <li>Video Editor</li>
-                  <li>Sound Designer</li>
-                </ul>
-              </div>
-              <div class="flex p-3">
-                <p>Tools:</p>
-                <ul>
-                  <li>DJI Pocket Osmo 3</li>
-                  <li>Adobe Premiere Pro</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container-fluid mb-3">
-        <div class="row">
-          <div class="col-sm-12 col-lg-6">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe
-                class="embed-responsive-item"
-                src="https://drive.google.com/file/d/1VUwrShVWm-A1UNOEXhKjqagVFZawQrMC/preview"
-                height="100%"
-                width="100%"
-                allow="autoplay"
-              ></iframe>
-            </div>
-          </div>
-          <div class="col-sm-12 col-lg-6 my-3 align-self-center">
-            <div class="text-center">
-              <h2>Nationwide Simultaneous Earthquake Drill</h2>
-              <h3>NDRRMC Occidental Mindoro</h3>
-            </div>
-            <div class="row justify-content-center">
-              <div class="flex p-3">
-                <p>Roles:</p>
-                <ul>
-                  <li>Videographer</li>
-                  <li>Video Editor</li>
-                  <li>Sound Designer</li>
-                </ul>
-              </div>
-              <div class="flex p-3">
-                <p>Tools:</p>
-                <ul>
-                  <li>Sony a6000 + 16-50</li>
-                  <li>DJI SC Ronin Gimbal</li>
-                  <li>Adobe Premiere Pro</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container-fluid mb-3">
-        <div class="row">
-          <div class="col-sm-12 col-lg-6 order-lg-last">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe
-                class="embed-responsive-item"
-                src="https://drive.google.com/file/d/1gEjCqCxnUeFCg9LvxaoexuuM6dKtK-Ke/preview"
-                height="100%"
-                width="100%"
-                allow="autoplay"
-              ></iframe>
-            </div>
-          </div>
-          <div class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center">
-            <div class="text-center">
-              <h2>Levex Momentum</h2>
-              <h3>Company Soft Launching</h3>
-            </div>
-            <div class="row justify-content-center">
-              <div class="flex p-3">
-                <p>Roles:</p>
-                <ul>
-                  <li>Videographer</li>
-                  <li>Video Editor</li>
-                  <li>Sound Designer</li>
-                </ul>
-              </div>
-              <div class="flex p-3">
-                <p>Tools:</p>
-                <ul>
-                  <li>DJI Pocket Osmo 3</li>
-                  <li>Canon m50 Mark II</li>
-                  <li>Adobe Premiere Pro</li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
