Add cinematics tab

--- a/index.html
+++ b/index.html
@@ -396,7 +396,99 @@
           role="tabpanel"
           aria-labelledby="cinematics-tab"
         >
-          cinematics tab content
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1qYNlFSOY_76NdVJjS7hc3WQ_QAPNJCwX/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-6 my-3 align-self-center">
+                <div class="text-center">
+                  <h2>"Train Yourself to Find Blessings in Everything"</h2>
+                  <h3>Car Achiever</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6 order-lg-last">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1LYchBP-mF0NUJZ3VSHopFUQNq4eGL1sA/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div
+                class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center"
+              >
+                <div class="text-center">
+                  <h2>"Your life doesn't get better by chance, it gets better by change."</h2>
+                  <h3>Car Achiever</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1BeTsv78oTOy4DyUQAYtYO6hKAjdVX3bT/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-6 my-3 align-self-center">
+                <div class="text-center">
+                  <h2>"It's hard to fail, but it's worse to never try."</h2>
+                  <h3>Car Achiever</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6 order-lg-last">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1_FTh2wOFC3fHt5hBIOSHw5Ctxra7-waw/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div
+                class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center"
+              >
+                <div class="text-center">
+                  <h2>"Fear is a reaction, courage is a decision."</h2>
+                  <h3>Car Achiever</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         </div>
 
         <!-- Advertisements -->
