--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="container my-3">
         <ul class="nav nav-pills nav-fill" id="myTab" role="tablist">
           <li
-            class="nav-item m-1 order-lg-first order-last"
+            class="nav-item m-1"
             role="presentation"
           >
             <button
@@ -195,22 +195,6 @@
               aria-selected="false"
             >
               Motion Graphics
-            </button>
-          </li>
-
-          <li class="nav-item m-1" role="presentation">
-            <button
-              class="nav-link w-100 border-0 portfolio-filter-button"
-              class="nav-link w-100 border-0"
-              id="contact-tab"
-              data-toggle="tab"
-              data-target="#photography"
-              type="button"
-              role="tab"
-              aria-controls="photography"
-              aria-selected="false"
-            >
-              Photography
             </button>
           </li>
         </ul>
@@ -435,7 +419,10 @@
                 class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center"
               >
                 <div class="text-center">
-                  <h2>"Your life doesn't get better by chance, it gets better by change."</h2>
+                  <h2>
+                    "Your life doesn't get better by chance, it gets better by
+                    change."
+                  </h2>
                   <h3>Car Achiever</h3>
                 </div>
               </div>
@@ -489,8 +476,6 @@
           </div>
         </div>
 
-        </div>
-
         <!-- Advertisements -->
         <div
           class="tab-pane fade"
@@ -498,7 +483,71 @@
           role="tabpanel"
           aria-labelledby="advertisements-tab"
         >
-          advertisements tab content
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1GZspKh9WgdfGLPYgIKLy9DtHA4WFZE1F/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-6 my-3 align-self-center">
+                <div class="text-center">
+                  <h2>Lex Silog Food Menu</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6 order-lg-last">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/1ibF4Hnv9HLskwC4tAo8e0os1ZaFcX4i1/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div
+                class="col-sm-12 col-lg-6 order-lg-first my-3 align-self-center"
+              >
+                <div class="text-center">
+                  <h2>Lex Pares Food Menu</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-fluid mb-3">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://drive.google.com/file/d/15sPw8HPUQvCG21Tvs_5gj1QT1mVK_zy_/preview"
+                    height="100%"
+                    width="100%"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-6 my-3 align-self-center">
+                <div class="text-center">
+                  <h2>Supreme Pure Organic Barley</h2>
+                  <h3>Broadcasted on Net25</h3>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Motion Graphics -->
@@ -509,16 +558,6 @@
           aria-labelledby="motion_graphics-tab"
         >
           motion_graphics tab content
-        </div>
-
-        <!-- Photography -->
-        <div
-          class="tab-pane fade"
-          id="photography"
-          role="tabpanel"
-          aria-labelledby="photography-tab"
-        >
-          photography tab content
         </div>
       </div>
     </section>
