Add contact info footer

--- a/index.html
+++ b/index.html
@@ -651,6 +651,10 @@
     <!-- start section footer -->
     <div id="footer" class="text-center">
       <div class="container">
+        <h1>GET IN TOUCH</h1>
+        <h3>Quezon City, Philippines</h3>
+        <h3>ja.antalan2020@gmail.com</h3>
+        <h3>0949 961 6353</h3>
         <!-- 
       <div class="socials-media text-center">
 
@@ -671,7 +675,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
         -->
-          Credits to <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Credits to <a href="https://bootstrapmade.com/">BootstrapMade</a> & <a href="https://github.com/Ottsupi">Ottsupi</a>
         </div>
       </div>
     </div>
